--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,15 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
 
+  # state
+  flutter_riverpod: ^1.0.4
+
   # domain
   freezed_annotation: ^2.1.0
 
   # ui
   swipe_cards: ^1.0.0
+  bot_toast: ^4.0.3
 
 dev_dependencies:
   flutter_test:
